# mypa

./: .gitignore  README.md  pyproject.toml
example_package/: pyproject.toml
example_package/src/: main.py
mypa/: candidate.py  env.py  locker.py  main.py  provider.py  pyproject.py
